Add support filterByInUse in nearest query in Transmodel API